fix z-index

--- a/components/HeaderSection/HeaderSection.module.css
+++ b/components/HeaderSection/HeaderSection.module.css
@@ -7,6 +7,9 @@
     'navbar'
     'header-content';
 }
+.containerSubHeader {
+  z-index: 300;
+}
 .bgVideo {
   background: #242a35;
   background-color: #242a35;
