--- a/components/TitleSection/TitleSection.module.css
+++ b/components/TitleSection/TitleSection.module.css
@@ -11,6 +11,8 @@
   transform: rotate(90deg);
   margin: 25px auto;
   color: var(--colorRed);
+  position: relative;
+  z-index: -1;
 }
 .title {
   font-family: var(--raleway);
